# simple-bbs

./: .gitignore
backend/: pyproject.toml
backend/app/: main.py
backend/app/database/: connection.py  models.py  schemas.py  secrets.json
backend/app/libraries/: auth.py  util.py
backend/app/routers/: board.py  members.py
backend/app/services/: board_service.py  members_service.py
